--- a/src/Abu/Abu.html
+++ b/src/Abu/Abu.html
@@ -6,8 +6,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="/src/output.css">
 </head>
-<body>
-    <h1>Hello</h1>
-    <h2>World</h2>    
+<body class="bg-[#1F1F1F]">
+    <div class="min-h-screen px-4 pt-4 pb-8 flex flex-col items-center lg:hidden">
+    <div class="w-full flex justify-between items-center mb-4">
+        <img src="./fotos Abu/Behruz Aminov.png" alt="">
+        <div class="w-6 h-6 flex flex-col justify-between">
+            <img src="./fotos Abu/Vector 9.png" alt="">
+        </div>
+    </div>
+    <img src="./fotos Abu/0430fbf271ad4c1a7463d236881b4dc4014dfe5f.jpg" class="w-full h-[400px] object-cover rounded" />
+    <p class="text-white tracking-widest mt-8 text-sm">WELCOME</p>
+    <p class="text-white text-2xl font-bold mt-2 text-center">I’m Nakul Kumar</p>
+    <p class="text-white mt-1 text-sm tracking-wide text-center">CEO , UXM CREATIVE STUDIO</p>
+    <button class="mt-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-6 py-3 rounded-xl text-white font-medium text-sm active:scale-95 transition">Download CV</button>
+</div>
+
+<div class="flex gap-12 lg:hidden justify-center text-white">
+    <p>Client</p>
+    <p>Client</p>
+    <p>Client</p>
+    <p>Client</p>
+</div>
+<div class="mt-20 w-[220px] ml-7 h-[270px] bg-[#5A6C6C]">
+    <img class="w-[100%] h-[100%]" src="./fotos Abu/0430fbf271ad4c1a7463d236881b4dc4014dfe5f.jpg" style="position: relative; left: 40px; top: 15px;"  alt="">
+</div>
+
 </body>
 </html>
