--- a/src/Abu/Abu.html
+++ b/src/Abu/Abu.html
@@ -27,9 +27,18 @@
     <p>Client</p>
     <p>Client</p>
 </div>
-<div class="mt-20 w-[220px] ml-7 h-[270px] bg-[#5A6C6C]">
+<div class="mt-20 w-[220px] ml-7 h-[270px] bg-[#5A6C6C] lg:hidden">
     <img class="w-[100%] h-[100%]" src="./fotos Abu/0430fbf271ad4c1a7463d236881b4dc4014dfe5f.jpg" style="position: relative; left: 40px; top: 15px;"  alt="">
 </div>
-
+        <div class="w-[80%] m-auto mt-20 lg:hidden">
+            <p class="text-[42px] font-bold text-white">About</p>
+            <p class="text-white text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sollicitudin ut augue netus fusce fringilla. Aliquam blandit enim odio cursus id. Pulvinar commodo pellentesque non massa, nunc massa nisi est id. Diam est molestie massa commodo pulvinar aliquam arcu gravida. Dictum pretium senectus dolor vulputate tempor ac vel. Placerat proin sed risus at fusce aliquam.</p>
+        </div>
+        <div class="text-white lg:hidden">
+            <p class="text-[40[px]">My Skills</p>
+        </div>
+        <div class="lg:hidden">
+            <img src="./fotos Abu/image_2025-07-25_15-46-07.png" alt="">
+        </div>
 </body>
 </html>
