--- a/src/Abu/Abu.html
+++ b/src/Abu/Abu.html
@@ -60,7 +60,48 @@
             <img class="mt-3" src="./fotos Abu/7.jpg" alt="">
             <p class="text-white text-[35px] font-bold m-auto my-5">Intrested in my Work</p>
             <p class="text-white text-[20px]">Download my cV to know more about me</p>
-            <button  class="mt-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-10 py-3 rounded-xl text-white font-medium text-sm active:scale-95 transition">Download CV</button>
+            <button  class="mt-6 my-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-10 py-3 rounded-xl text-white font-medium text-sm active:scale-95 transition">Download CV</button>
         </div>
+
+        <div class="hidden lg:flex justify-between w-[80%] m-auto">
+            <div>
+                <img class="my-10" src="./fotos Abu/Behruz Aminov.png" alt="">
+                <p class="text-white mt-56 text-[30px]">Welcome </p>
+                <p class="text-[50px] text-white w-[70%] font-bold">I’m Akmal Nazriev</p>
+                <p class="text-white text-20px my-5">Juniyor lvl 1 developer</p>
+                <button class="mt-6 my-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-10 py-3 rounded-xl text-white font-medium text-sm active:scale-95 transition">Download CV</button>
+            </div>
+            <div>
+                <img src="./fotos Abu/8.png" alt="">
+            </div>
+        </div>
+        <div class="hidden lg:flex gap-10 text-[20px] text-white w-[80%] m-auto">
+            <p>Client</p>
+            <p>Client</p>
+            <p>Client</p>
+            <p>Client</p>
+        </div>
+        <section class="hidden lg:flex w-[80%] m-auto justify-between mt-20">
+            <div class="w-[40%]">
+                <img class="" src="./fotos Abu/9.png" alt="">
+            </div>
+            <div class="w-[45%]">
+                <img src="./fotos Abu/10.png" alt=""> 
+                <p class="text-white mt-10" style="line-height: 2;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sollicitudin ut augue netus fusce fringilla. Aliquam blandit enim odio cursus id. Pulvinar commodo pellentesque non massa, nunc massa nisi est id. Diam est molestie massa commodo pulvinar aliquam arcu gravida. Dictum pretium senectus dolor vulputate tempor ac vel. Placerat proin sed risus at fusce aliquam. Convallis varius auctor quam fusce diam. Vulputate enim est nibh diam pellentesque. Adipiscing dolor turpis egestas velit sit feugiat ultricies.
+Id ac placerat dolor sem neque elit. Ut nisl turpis nisi etiam ac nibh.</p>   
+            </div>
+        </section>
+
+        <div class="hidden lg:block w-[80%] m-auto mt-28">
+            <p class="text-[40px] text-white">My Skills</p>
+        </div>
+        <section class="hidden lg:flex justify-between items-center w-[70%] m-auto mt-5">
+            <img class="w-[10%]" src="./fotos Abu/Group 320.png" alt="">
+            <img class="w-[10%]" src="./fotos Abu/Group 321.png" alt="">
+            <img class="w-[10%]" src="./fotos Abu/11.png" alt="">
+            <img class="w-[10%]" src="./fotos Abu/12.png" alt="">
+            <img class="w-[10%]" src="./fotos Abu/13.png" alt="">
+        </section>
+        
 </body>
 </html>
