--- a/src/oyatullo1001/oyatullo.html
+++ b/src/oyatullo1001/oyatullo.html
@@ -222,7 +222,7 @@
     <a href="#" class="hover:underline">Помощь</a>
     <a href="#" class="hover:underline">Контакты</a>
   </div>
-  <p class="text-xs text-gray-500">&copy; 2020 Английский язык</p>
+  <p class="text-xs text-gray-500">&copy; 2020 Английский язык</p>.
 </footer>
 </body>
 </html>
