--- a/src/Abu/Abu.html
+++ b/src/Abu/Abu.html
@@ -102,6 +102,23 @@ Id ac placerat dolor sem neque elit. Ut nisl turpis nisi etiam ac nibh.</p>
             <img class="w-[10%]" src="./fotos Abu/12.png" alt="">
             <img class="w-[10%]" src="./fotos Abu/13.png" alt="">
         </section>
-        
+        <section class="hidden lg:flex justify-between items-center w-[80%] m-auto mt-28">
+            <img class="w-[35%]" src="./fotos Abu/14.png" alt="">
+            <img class="w-[35%]" src="./fotos Abu/15.png" alt="">
+        </section>
+        <div class="hidden lg:flex">
+            <p class="text-[50px] text-white w-[90%] m-auto my-24">My Work Experiance</p>
+        </div>
+        <section class="hidden lg:flex flex-wrap w-[90%] m-auto gap-6">
+            <img class="w-[48%]" src="./fotos Abu/4.jpg" alt="">
+            <img class="w-[48%]" src="./fotos Abu/5.jpg" alt="">
+            <img class="w-[48%]" src="./fotos Abu/6.jpg" alt="">
+            <img class="w-[48%]" src="./fotos Abu/7.jpg" alt="">
+        </section>
+        <div class="hidden lg:block text-center">
+            <p class="text-white text-[50px] mt-24">Intrested in my Work</p>
+            <p class="text-gray-500 text-[20px]">Download my cV to know more about me</p>
+            <button class="mt-6 my-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-20 py-4 rounded-xl text-white font-medium text-sm active:scale-95 transition text-[18px]">Download CV</button>
+        </div>
 </body>
 </html>
