--- a/src/Abu/Abu.html
+++ b/src/Abu/Abu.html
@@ -117,7 +117,7 @@ Id ac placerat dolor sem neque elit. Ut nisl turpis nisi etiam ac nibh.</p>
         </section>
         <div class="hidden lg:block text-center">
             <p class="text-white text-[50px] mt-24">Intrested in my Work</p>
-            <p class="text-gray-500 text-[20px]">Download my cV to know more about me</p>
+            <p class="text-gray-500 text-[20px]">Download my cV to know more about me.</p>
             <button class="mt-6 my-6 bg-gradient-to-r from-cyan-400 to-blue-600 px-20 py-4 rounded-xl text-white font-medium text-sm active:scale-95 transition text-[18px]">Download CV</button>
         </div>
 </body>
